--- a/note.ipynb
+++ b/note.ipynb
@@ -29,6 +29,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = pd.read_csv('Dataset/test.csv')\n",
+    "test_df = pd.read_csv('Dataset/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
